[gd_scene load_steps=17 format=3 uid="uid://itihdsxsasau"]

[ext_resource type="Script" path="res://Objects/Gameplay/Enemies/Enemy.gd" id="1_1uq5v"]
[ext_resource type="Texture2D" uid="uid://q5buowkvf8cv" path="res://Sprites/Player/antsprite.png" id="2_u6raj"]
[ext_resource type="PackedScene" uid="uid://causfd1ls5ll7" path="res://Objects/Gameplay/Drops/AbilityDrop.tscn" id="2_uxu5j"]
[ext_resource type="Resource" uid="uid://cphlny8qpded8" path="res://Objects/Gameplay/Abilities/_resource/3Burst.tres" id="3_751vc"]
[ext_resource type="PackedScene" uid="uid://u7ujf1rk1yi3" path="res://Components/HitBoxComponent.tscn" id="3_fd6t7"]
[ext_resource type="PackedScene" uid="uid://wb7i7fke0ykf" path="res://Components/health_component.tscn" id="4_jc4xr"]
[ext_resource type="PackedScene" uid="uid://df8f3gbs0jqlr" path="res://Components/damage_box_component.tscn" id="5_huhtc"]
[ext_resource type="Script" path="res://Components/DropOnDeath.gd" id="6_hxqh2"]
[ext_resource type="PackedScene" uid="uid://dmt7otxifq4f8" path="res://Objects/Gameplay/Enemies/EnemyDeathEffect.tscn" id="7_l5vdu"]
[ext_resource type="EventAsset" uid="uid://sx546ebin8a4" path="res://addons/FMOD/editor/resources/events/{6862ee6b-eba2-4874-b7a4-461b2f7fdc85}.tres" id="10_e8hj7"]

[sub_resource type="Animation" id="Animation_3qebr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bkqij"]
resource_name = "ant_idle"
length = 0.308
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3wec"]
_data = {
"RESET": SubResource("Animation_3qebr"),
"ant_idle": SubResource("Animation_bkqij")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ch8kf"]
size = Vector2(20.084, 8.40336)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcfci"]
size = Vector2(27.7768, 15.2948)

[sub_resource type="CircleShape2D" id="CircleShape2D_u173x"]
radius = 3.78151

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(2.38, 2.38)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_1uq5v")
momentumMovement = false
abilityPickup = ExtResource("2_uxu5j")
abilityResource = ExtResource("3_751vc")
event = ExtResource("10_e8hj7")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.529412, 0.443137, 1)
rotation = 4.71239
scale = Vector2(0.063, 0.068)
texture = ExtResource("2_u6raj")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_j3wec")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ch8kf")

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("3_fd6t7")]
collision_layer = 2
collision_mask = 0
healthComponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
scale = Vector2(1.195, 1.195)
shape = SubResource("RectangleShape2D_mcfci")

[node name="HealthComponent" parent="." instance=ExtResource("4_jc4xr")]

[node name="DamageBoxComponent" parent="." instance=ExtResource("5_huhtc")]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBoxComponent"]
position = Vector2(10.5042, 0)
shape = SubResource("CircleShape2D_u173x")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DropOnDeath" type="Node2D" parent="."]
script = ExtResource("6_hxqh2")
dropScene = Array[PackedScene]([ExtResource("7_l5vdu")])

[connection signal="area_entered" from="DamageBoxComponent" to="DamageBoxComponent" method="_on_area_entered"]
[connection signal="hit_hurtbox" from="DamageBoxComponent" to="." method="_on_damage_box_component_hit_hurtbox"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
